// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datepicker pattern should match snapshot 1`] = `
<div>
  <div>
    <div
      class="css-1m0srfo-DatePickerInput"
    >
      <div
        class="css-109th3q-InputWrapper"
      >
        <div
          class="css-1qm0f6g-InputLabel"
        >
          <label
            class="css-1pst1pz-Label"
            for="picker"
          >
            datepicker
          </label>
        </div>
        <div
          class="css-xcsx4z"
        >
          <input
            class="css-msl6v2"
            id="picker"
            type="text"
            value=""
          />
          <div
            class="css-e7011r"
          >
            <button
              class="css-nnuopu-Button"
            >
              <span
                class="css-1geq0g0"
              >
                <i
                  class="material-icons  css-zif8ik-Icon"
                >
                  calendar_today
                </i>
              </span>
              <span />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Datepicker pattern should match snapshot when all props are populated 1`] = `
<div>
  <div>
    <div
      class="css-1m0srfo-DatePickerInput"
    >
      <div
        class="css-109th3q-InputWrapper"
      >
        <div
          class="css-1qm0f6g-InputLabel"
        >
          <label
            class="css-1pst1pz-Label"
            for="picker"
          >
            datepicker
          </label>
        </div>
        <div
          class="css-xcsx4z"
        >
          <input
            class="css-msl6v2"
            id="picker"
            type="text"
            value="02/02/2020"
          />
          <div
            class="css-e7011r"
          >
            <button
              class="css-nnuopu-Button"
            >
              <span
                class="css-1geq0g0"
              >
                <i
                  class="material-icons  css-zif8ik-Icon"
                >
                  calendar_today
                </i>
              </span>
              <span />
            </button>
          </div>
        </div>
        <small
          class="css-ftpxt1-InputWrapper"
        >
          datepicker help
        </small>
      </div>
    </div>
  </div>
</div>
`;

exports[`Datepicker pattern should open calendar when button is clicked 1`] = `
<div>
  <div>
    <div
      class="css-1m0srfo-DatePickerInput"
    >
      <div
        class="css-109th3q-InputWrapper"
      >
        <div
          class="css-1qm0f6g-InputLabel"
        >
          <label
            class="css-1pst1pz-Label"
            for="picker"
          >
            picker
          </label>
        </div>
        <div
          class="css-xcsx4z"
        >
          <input
            class="css-msl6v2"
            id="picker"
            type="text"
            value="01/02/2020"
          />
          <div
            class="css-e7011r"
          >
            <button
              class="css-nnuopu-Button"
            >
              <span
                class="css-1geq0g0"
              >
                <i
                  class="material-icons  css-zif8ik-Icon"
                >
                  calendar_today
                </i>
              </span>
              <span />
            </button>
          </div>
        </div>
      </div>
      <div
        class="css-1c8vey"
        data-testid="calendar-container"
      >
        <div
          class="css-r09zb2-Card"
        >
          <div>
            <div
              class="css-135ho84"
            >
              <div
                class="css-1pvc4u8-Calendar"
              >
                <div
                  class="css-ft1sxc-Calendar css-4cffwv"
                >
                  <button
                    class="css-hcal7n-Button"
                  >
                    <span
                      class="css-1geq0g0"
                    >
                      <i
                        class="material-icons  css-y0j37o-Icon"
                      >
                        chevron_left
                      </i>
                    </span>
                    <span />
                  </button>
                  <span
                    class="css-1a9mqxr-Text css-vurnku"
                  >
                    February
                     
                    2020
                  </span>
                  <button
                    class="css-hcal7n-Button"
                  >
                    <span />
                    <span
                      class="css-1geq0g0"
                    >
                      <i
                        class="material-icons  css-y0j37o-Icon"
                      >
                        chevron_right
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  class="css-1a0kgyi-Calendar"
                >
                  <div
                    class="css-108m3ho-Tooltip"
                  >
                    <span
                      class="css-1rgqr4q"
                    >
                      S
                    </span>
                  </div>
                  <div
                    class="css-108m3ho-Tooltip"
                  >
                    <span
                      class="css-1rgqr4q"
                    >
                      M
                    </span>
                  </div>
                  <div
                    class="css-108m3ho-Tooltip"
                  >
                    <span
                      class="css-1rgqr4q"
                    >
                      T
                    </span>
                  </div>
                  <div
                    class="css-108m3ho-Tooltip"
                  >
                    <span
                      class="css-1rgqr4q"
                    >
                      W
                    </span>
                  </div>
                  <div
                    class="css-108m3ho-Tooltip"
                  >
                    <span
                      class="css-1rgqr4q"
                    >
                      T
                    </span>
                  </div>
                  <div
                    class="css-108m3ho-Tooltip"
                  >
                    <span
                      class="css-1rgqr4q"
                    >
                      F
                    </span>
                  </div>
                  <div
                    class="css-108m3ho-Tooltip"
                  >
                    <span
                      class="css-1rgqr4q"
                    >
                      S
                    </span>
                  </div>
                </div>
                <div
                  class="css-1tme9z0-Calendar"
                >
                  <span
                    class="css-gakn16-CalendarDay"
                  >
                    26
                  </span>
                  <span
                    class="css-gakn16-CalendarDay"
                  >
                    27
                  </span>
                  <span
                    class="css-gakn16-CalendarDay"
                  >
                    28
                  </span>
                  <span
                    class="css-gakn16-CalendarDay"
                  >
                    29
                  </span>
                  <span
                    class="css-gakn16-CalendarDay"
                  >
                    30
                  </span>
                  <span
                    class="css-gakn16-CalendarDay"
                  >
                    31
                  </span>
                  <span
                    class="css-1and8og-CalendarDay"
                  >
                    1
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    2
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    3
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    4
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    5
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    6
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    7
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    8
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    9
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    10
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    11
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    12
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    13
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    14
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    15
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    16
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    17
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    18
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    19
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    20
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    21
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    22
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    23
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    24
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    25
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    26
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    27
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    28
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                  >
                    29
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
